--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@ body {
   padding: 20px 60px;
 }
 
+@media only screen and (max-width: 376px) {
+  body {
+    padding: 20px 10px;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
